<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".Main"
    android:background="#B0E0E6">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnJugar"
        android:id="@+id/btnJugar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_alignStart="@+id/btnReglas"
        android:layout_alignEnd="@+id/btnReglas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReglas"
        android:id="@+id/btnReglas"
        android:layout_below="@+id/btnJugar"
        android:layout_alignStart="@+id/btnDif"
        android:layout_alignEnd="@+id/btnDif" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDif"
        android:text="@string/btnDif"
        android:layout_below="@+id/btnReglas"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPuntuacion"
        android:id="@+id/btnPuntuacion"
        android:layout_below="@+id/btnDif"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSalir"
        android:id="@+id/btnSalir"
        android:layout_below="@+id/btnPuntuacion"
        android:layout_alignStart="@+id/btnDif"
        android:layout_alignEnd="@+id/btnDif" />

</RelativeLayout>